--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.billflores.android_mvp_sample.MainActivityView">
+    tools:context="com.billflores.android_mvp_sample.activity.MainActivityView">
 
     <EditText
         android:id="@+id/editTextNum"
+        android:inputType="numberDecimal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <Button
@@ -22,8 +23,14 @@
         android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/textViewName"
+        android:id="@+id/textViewResult"
+        android:textSize="16sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_height="wrap_content"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewPerson"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
+
 </LinearLayout>
